# Copyright 2014 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//brave/build/cargo.gni")

rust_ffi("dh_feedcontroller_ffi") {
    shared_library_define = "DH_FEEDCONTROLLER_SHARED_LIBRARY"
    implementation_define = "DH_FEEDCONTROLLER_IMPLEMENTATION"

    sources = [
        "include/blobstore.h",
        "src/lib.rs.h",
        "src/blobstore.cc",
#        "src/wrapper.h"
    ]

    deps = [
        "//brave/components/brave_today/common:mojo_bindings",
    ]
}

rust_crate("rust_lib") {
    inputs = [
        "Cargo.toml",
#        "cbindgen.toml",
        "src/lib.rs",
    ]
}
